--- a/src/main/resources/templates/order/order-page.html
+++ b/src/main/resources/templates/order/order-page.html
@@ -53,9 +53,9 @@
 						<div class="my-3">
 						 <h5 class="font-weight-bold">받는 분</h5>
 						 <div><!--  사용자의 정보를 value 로 불러와서 출력시키기 -->
-						 	<input type="text" placeholder="이름을 입력해 주세요" class="form-control"  th:value="${user.name}">
+						 	<input type="text" placeholder="이름을 입력해 주세요" class="form-control" id="nameInput" th:value="${user.name}">
 						 </div>
-						 <input type="text" placeholder="휴대폰 번호를 입력해주세요" class="form-control" th:value="${user.phoneNumber}">
+						 <input type="text" placeholder="휴대폰 번호를 입력해주세요" class="form-control" id="passwordInput" th:value="${user.phoneNumber}">
 						</div>
 						
 						<div class="my-3">
