--- a/src/main/resources/templates/order/order-list.html
+++ b/src/main/resources/templates/order/order-list.html
@@ -34,9 +34,9 @@
 						</div>
 					</div>
 			
-			
+			<!--  d-none 줄 div 주기 -->
 				<div class="order-info-none d-flex align-items-center justify-content-center d-none"><!--주문내역확인 페이지 없는 경우-->
-					<div class="text-center d-none ">
+					<div class="text-center">
 						<i class="h1 bi bi-exclamation-circle-fill font-weight-bold text-secondary"></i>
 						<div class="mt-3">
 							<h6>최근 주문된 내역이 없습니다</h6>
