--- a/src/main/resources/templates/order/order-page.html
+++ b/src/main/resources/templates/order/order-page.html
@@ -56,7 +56,7 @@
 						 	<input type="text" placeholder="이름을 입력해 주세요" class="form-control" id="nameInput" th:value="${user.name}">
 						 </div>
 						 <div class="my-2">
-						 	<input type="text" placeholder="하이픈('-')을 포함한 휴대폰 번호를 입력해주세요" class="form-control" id="passwordInput" th:value="${user.phoneNumber}">
+						 	<input type="text" placeholder="하이픈('-')을 포함한 휴대폰 번호를 입력해주세요" class="form-control" id="phoneInput" th:value="${user.phoneNumber}">
 						 </div>
 						</div>
 						
@@ -86,14 +86,14 @@
 								<tr>
 									<td>보유 포인트</td>
 									<td class="d-flex">
-										<span class="text-success mr-1" th:text="${#numbers.formatInteger(user.point, 3, 'COMMA')}"> 000</span>
+										<span class="text-success mr-1" th:text="${#numbers.formatInteger(user.point, 3, 'COMMA')}" id="havePoint" th:data-have-point="${user.point}"> 000</span>
 										<span> 원</span>
 									</td>
 									<td>
-										<input type="text" class="form-control text-right font-weight-bold" placeholder="000 원">
+										<input type="text" class="form-control text-right font-weight-bold" th:placeholder="|${#numbers.formatInteger(user.point, 3, 'COMMA')} 원|" id="usePointInput">
 									</td>
 									<td>
-										<button type="button" class="btn btn-outline-secondary w-10 font-weight-bold">사용</button>
+										<button type="button" class="btn btn-outline-secondary w-10 font-weight-bold" id="usePointBtn">사용</button>
 									</td>
 								</tr>
 							</table>
@@ -116,7 +116,7 @@
 									<option>신한카드</option>
 									<option>우리카드</option>
 								</select>
-								<select class="form-control w-25 ml-3" id="">
+								<select class="form-control w-25 ml-3" id="installment">
 									<option>할부 선택</option>
 									<option>일시불</option>
 									<option>2개월</option>
@@ -195,13 +195,17 @@
 								<th>상품 할인</th>
 								<td th:text="|${#numbers.formatInteger(orderDTO.totalDTO.totalDiscount, 3, 'COMMA')} 원|">0000원</td>
 							</tr>
+							<tr>
+								<th>적립금 할인</th>
+								<td>0000원</td>
+							</tr>
 							<tr class=" border-top">
 								<th>결제 예정 금액</th>
 								<td th:text="|${#numbers.formatInteger(orderDTO.totalDTO.finalPrice, 3, 'COMMA')} 원|" class="text-primary font-weight-bold">0000원</td>
 							</tr>
 							<tr>
 								<th>적립 예정 포인트</th>
-								<td th:text="|${#numbers.formatInteger(orderDTO.totalDTO.totalPoints, 3, 'COMMA')} 원|">000 point</td>
+								<td th:text="|${#numbers.formatInteger(orderDTO.totalDTO.totalPoints, 3, 'COMMA')} 원|" th:data-save-point="${orderDTO.totalDTO.totalPoints}" id="savePoint">000 point</td>
 							</tr>
 						</table>
 							<button type="button" class="btn btn-primary my-3 w-100" id="orderBtn">결제하기</button>
@@ -223,21 +227,100 @@
 		</section>
 
 		<script layout:fragment="script">
+		
 		$(document).ready(function(){
 
 
 		//userAdrBtn을 누르면 user가 등록해둔 정보가 출력됨 
 		//newAdrBtn을 누르면 필드 초기화(비워짐)
 		let name = $('#nameInput').val();
-		let phone = $('#passwordInput').val();
+		let phone = $('#phoneInput').val();
 		let postcode = $('#postcode').val();
 		let addr = $('#addr').val();
 		let detailAddr = $('#detailAddr').val();
+		let payments = $("input[name=paymentSelect]:checked").val();
+		let usedPoint = $("usePointInput").val();
+		
+		let address = addr + " " + detailAddr;
+		let havePoint =$("#havePoint").data("have-point");
+		let usePoint =$("#usePointInput").val();
+		
+		let nowPoint = havePoint - usePoint;
+		
+		let savePoint = $("#savePoint").data("save-point")
+		let point = nowPoint + savePoint;
+		
+		// 보유금액 이상은 넣을 수 없음
+		$("#usePointInput").on("keyup", function () {
+		    let havePoint = $("#havePoint").data("have-point");
+		    let usePoint = parseInt($(this).val()); 
+		    
+		    if (usePoint < 0) {
+		        $(this).val(0);
+		        }
+		    else if (usePoint > havePoint) {
+		        alert("보유 금액 이하로 입력해야 합니다.");
+		        $(this).val(havePoint); // 최대값으로 설정
+		    }
+		});
+		
+		// 포인트 사용버튼을 누르면 point값이 저장됨 -> 
+		$("#usePointBtn").on("click",function(){
+
+			let havePoint =$("#havePoint").data("have-point");
+			let usePoint =$("#usePointInput").val();
+			
+			let nowPoint = havePoint - usePoint;
+		
+		});
 		
 		
+		// 결제하기 버튼
 		$("#orderBtn").on("click",function(){
 
+			payments = $("input[name=paymentSelect]:checked").val();
+		
+			alert(point);
 			
+			
+			if(!name){
+			alert("수령인을 기입해주세요");
+			}
+			if(!phone){
+			alert("수령인을 기입해주세요");
+			}
+			if(!postcode){
+			alert("주소를 선택해주세요");
+			}
+			
+			
+			$.ajax({
+
+				type:"post"
+				,url:"/order/order-add"
+				,data:{
+					"name":name
+					,"phoneNumber":phone
+					,"postcode":postcode
+					,"totalPrice":totalPrice
+					,"shippingFee":shippingFee
+					,"payments":payments
+					,"point":point
+					}
+				,success:function(response){
+
+					if(response.result == "success"){
+	
+						location.href="/nunubooks/order/order-complete";
+					} else {
+						alert("주문 실패")
+					}
+				}
+				,error:function(){
+				alert("주문 오류")
+				}
+			
+			});
 		
 		});
 		
@@ -246,7 +329,7 @@
 		 $("#userAdrBtn").on('click', function() {
 	            // user 정보 채우기
 	            $('#userName').val(name);
-	            $('#passwordInput').val(phone);
+	            $('#phoneInput').val(phone);
 	            $('#postcode').val(postcode);
 	            $('#addr').val(addr);
 	            $('#detailAddr').val(detailAddr);
@@ -256,7 +339,7 @@
 	        $("#newAdrBtn").on('click', function() {
 	            // 입력 필드 비우기
 	            $('#nameInput').val('');
-	            $('#passwordInput').val('');
+	            $('#phoneInput').val('');
 	            $('#postcode').val('');
 	            $('#addr').val('');
 	            $('#detailAddr').val('');
@@ -265,23 +348,24 @@
 	        });
 		
 		
-		// 
+	        
+	        
+	        
+	        
+	        
 	        $("#creditRadio").on('click',function(){
-
 	//        	 alert($("#creditRadio").val());
 	        	
 	        	$("#bankBox").addClass("d-none");
 	        	$("#creditBox").removeClass("d-none");
 	        
-	        
 	        });
+		
 	        $("#bankRadio").on('click',function(){
 //	        	 alert($("#bankRadio").val());
+
 	        	$("#creditBox").addClass("d-none");
 	        	$("#bankBox").removeClass("d-none");
-
-	        
-	        
 	        });
 	        
 	        
