- 주문 ~ 주문 완료 기능 작성 완료 - 장바구니가 비워져있을때의 기능 처리 수정 필요 - 주문 목록 조회 기능 작성중 #6 #9

--- a/src/main/resources/templates/order/cart.html
+++ b/src/main/resources/templates/order/cart.html
@@ -47,6 +47,15 @@
 			
 			
 			<div class="d-flex"><!--  장바구니 정보- 배송정보 전체 묶는 div-->
+					<div class="order-info-none d-flex align-items-center justify-content-center" ><!--주문내역확인 페이지 없는 경우-->
+						<div class="text-center">
+							<i class="h1 bi bi-exclamation-circle-fill font-weight-bold text-secondary"></i>
+							<div class="mt-3">
+								<h6>장바구니가 비었습니다</h6>
+							</div>
+						</div>
+					</div>
+
 
 				<div>
 					<div th:each="cart:${cartList.cartDTOList}">
