--- a/src/main/resources/templates/fragments/menu.html
+++ b/src/main/resources/templates/fragments/menu.html
@@ -3,7 +3,7 @@
 				<li class="nav-item mr-4 ml-2"><a class="search-icons bi bi-list font-weight-bold h4 menu-text" href="#"></a></li>
 				<li class="nav-item mr-4"><a href="#" class="menu-text">국내도서</a></li>
 				<li class="nav-item mr-4"><a href="#" class="menu-text">해외도서</a></li>
-				<li class="nav-item mr-4"><a href="/nunubooks/bestSeller" class="menu-text">베스트셀러</a></li>
+				<li class="nav-item mr-4"><a href="/nunubooks/books" class="menu-text">베스트셀러</a></li>
 				<li class="nav-item"><a href="#" class="menu-text">eBook</a></li>
 			</ul>
 		</nav>
