--- a/src/main/resources/templates/order/order-history.html
+++ b/src/main/resources/templates/order/order-history.html
@@ -34,12 +34,13 @@
 						</div>
 					</div>
 			
-			<!--  d-none 줄 div 주기 -->
-				<div class="order-info-none d-flex align-items-center justify-content-center d-none"><!--주문내역확인 페이지 없는 경우-->
-					<div class="text-center">
-						<i class="h1 bi bi-exclamation-circle-fill font-weight-bold text-secondary"></i>
-						<div class="mt-3">
-							<h6>최근 주문된 내역이 없습니다</h6>
+				<div class="d-none"><!--주문내역확인 페이지 없는 경우-->
+					<div class="order-info-none d-flex align-items-center justify-content-center"><!--주문내역확인 페이지 없는 경우-->
+						<div class="text-center">
+							<i class="h1 bi bi-exclamation-circle-fill font-weight-bold text-secondary"></i>
+							<div class="mt-3">
+								<h6>최근 주문된 내역이 없습니다</h6>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -49,25 +50,24 @@
 						<thead>
 							<tr>
 								<th  colspan="3">2025년 0월 00일</th>
-								<th class="text-success" th:text="${orderedList.orderId}">1231241245</th>
+								<th class="text-success">1231241245</th>
+								<th><a href="#" class="text-dark">삭제</a></th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr class="order-bookInfo" th:each="orderList : ${orderedList.orderedBooks}">
+							<tr class="order-bookInfo" >
 								<td class="order-book-img bg-info">
 									<img src="#" >
 								</td>
-								<td class="order-book-title align-middle">
-									<div class="font-weight-bold" th:text=${orderList.totalDTO.cartDTOList.bookInfo.item.title}>책 제목 어쩌구저쩌구저쩌구 </div>
+								<td colspan="2" class="order-book-title align-middle">
+									<div class="font-weight-bold" >책 제목 어쩌구저쩌구저쩌구 </div>
 									<div>수량 :1개 </div>
 								</td>
 								<td class="order-book-amount align-middle text-center">
-									<div class="font-weight-bold">1개</div>
+									<div class="font-weight-bold">총가격</div>
 								</td>
-								<td rowspan="2" class="order-book-amount align-middle text-center border-left">
-									<button type="button" class="btn btn-outline-secondary">
-										<span>배송조회</span>
-									</button>
+								<td class="align-middle text-center border-left">
+										<span class="text-info font-weight-bold">주문 상태</span>
 								</td> <!--  rowspan="" 은 출력되는 리스트 수 만큼 적혀야함. 그리고 이 버튼 td는 반복되지 않아야함 -->
 							</tr>
 							
