--- a/src/main/resources/templates/order/order-info.html
+++ b/src/main/resources/templates/order/order-info.html
@@ -14,7 +14,7 @@
 			</div>
 				<div class="mr-1 text-center  mt-4">
 					<h6 class="font-weight-bold mb-2">쇼핑 내역</h6>
-					  <a class="nav-link text-dark" href="/nunubooks/order/order-list">주문 내역</a>
+					  <a class="nav-link text-dark" href="/nunubooks/order/orderHistory">주문 내역</a>
 					  <!-- 
 					  <a class="nav-link text-dark" href="#">카테고리2</a>
 					  <a class="nav-link text-dark" href="#">카테고리3</a>
@@ -34,41 +34,84 @@
 						</div>
 					</div>
 			
-			<!--  d-none 줄 div 주기 -->
-				<div class="order-info-none d-flex align-items-center justify-content-center d-none"><!--주문내역확인 페이지 없는 경우-->
-					<div class="text-center">
-						<i class="h1 bi bi-exclamation-circle-fill font-weight-bold text-secondary"></i>
-						<div class="mt-3">
-							<h6>최근 주문된 내역이 없습니다</h6>
-						</div>
-					</div>
+				<div class="border p-2 my-4 order-box">
+					<table class="table">
+						<tr>
+							<th>주문일자</th>
+							<th>주문번호</th>
+							<th>주문금액</th>
+							<th>주문상태</th>
+						</tr>
+						<tr>
+							<td>2025/00/00</td>
+							<td>11111</td>
+							<td>
+							<div>12124원</div>
+							<div>(000point 적립)</div>
+							</td>
+							<td>주문완료</td>
+						</tr>
+						
+					</table>
 				</div>
+				
+				<div class="border p-2 my-4 order-box">
+				<h5 class="font-weight-bold">주문자 정보</h5>
+					<table class="table">
+					<tr>
+						<th>배송지 정보</th>
+						<td>
+							<div>
+							이름 /전화번호
+							</div>
+							<div>
+							주소
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<th>배송 요청사항</th>
+						<td>
+							<div>
+							어쩌구저쩌구 해주세요
+							</div>
+						</td>
+					</tr>
+					<tr>
+						<th>결제수단</th>
+						<td>
+						<span>신용카드</span>
+						<span>어쩌구카드(*000)</span>
+						</td>
+					</tr>
+					</table>
+				</div>
+				
 				
 				<div class="order-box"><!--주문내역확인 페이지 리스트-->
 					<table class="table">
 						<thead>
 							<tr>
-								<th  colspan="3">2025년 0월 00일</th>
-								<th class="text-success" th:text="${orderedList.orderId}">1231241245</th>
+								<th  colspan="2">주문 상품 정보</th>
+								<th class="text-success">
+								<button type="button" class="btn btn-outline-secondary">
+										<span>배송조회</span>
+									</button>
+								</th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr class="order-bookInfo" th:each="orderList : ${orderedList.orderedBooks}">
+							<tr class="order-bookInfo" >
 								<td class="order-book-img bg-info">
 									<img src="#" >
 								</td>
 								<td class="order-book-title align-middle">
-									<div class="font-weight-bold" th:text=${orderList.totalDTO.cartDTOList.bookInfo.item.title}>책 제목 어쩌구저쩌구저쩌구 </div>
+									<div class="font-weight-bold" >책 제목 어쩌구저쩌구저쩌구 </div>
 									<div>수량 :1개 </div>
 								</td>
 								<td class="order-book-amount align-middle text-center">
-									<div class="font-weight-bold">1개</div>
+									<div class="font-weight-bold">00000원</div>
 								</td>
-								<td rowspan="2" class="order-book-amount align-middle text-center border-left">
-									<button type="button" class="btn btn-outline-secondary">
-										<span>배송조회</span>
-									</button>
-								</td> <!--  rowspan="" 은 출력되는 리스트 수 만큼 적혀야함. 그리고 이 버튼 td는 반복되지 않아야함 -->
 							</tr>
 							
 						</tbody>
