--- a/src/main/resources/templates/books/product.html
+++ b/src/main/resources/templates/books/product.html
@@ -8,7 +8,7 @@
 		<section layout:fragment="contents" class="contents">
 			
 		
-		
+		<div class="container">
 				<div class="my-4" th:with="item =${book.item[0]}">
 					<div class="border-bottom">
 						<h3 class="font-weight-bold" th:text="${item.title}">책 제목</h3>
@@ -18,42 +18,45 @@
 						
 					</div>
 					
-					<div class="d-flex"> <!--  커버, 가격정보 flex -->
+					<div class="d-flex my-4"> <!--  커버, 가격정보 flex -->
 						<div class="mt-3 mx-3 bg-info"><!-- 책 커버 이미지 -->
 							<img alt="책 제목 표지" th:src="${item.cover}" class="book-image">
 						</div>
-						<div>
-							<div class="d-flex align-items-center border-bottom"> <!--  가격정보 -->
-								<h3 class="font-weight-bold mx-2" th:text="|${#numbers.formatInteger(item.priceSales, 3, 'COMMA')} 원|">13,500원</h3>
-								<del><h6 th:text="|${#numbers.formatInteger(item.priceStandard, 3, 'COMMA')} 원|">18,000원</h6></del>
-								<h5 class="menu-text font-weight-bold mx-2">(10%)</h5>
-							</div>
-							<div class="d-flex align-items-center border-bottom"> <!-- 적립 혜택 -->
-								<h4 class="font-weight-bold mr-3">적립금</h4>
-								<h6 class="menu-text mx-2" th:text="|(${#numbers.formatInteger(item.mileage, 3, 'COMMA')} point)|">720원</h6>
-							</div>
-							<div class="d-flex align-items-center border-bottom"> <!-- 적립 혜택 -->
-								<h4 class="font-weight-bold mr-3">배송안내</h4>
-								<div>
-									<h6>도서 포함 15,000원 이상 무료배송</h6>
-									<h6>지금 주문하면 내일 도착</h6>
-									<h6>(대한민국 어쩌구 배달안될지동 기준) 지역변경</h6>
-								</div>
-							</div>
-								<div class="my-3 border-bottom"> <!--  수량 -->
-									<button type="button">-</button>
-									<input type="text" placeholder="1" class="w-25">
-									<button type="button">+</button>
-								</div>
-							
-								<div class="my-3 border-bottom">
-									<button type="button" class="btn btn-outline-dark">장바구니</button>
-									<button type="button"  class="btn btn-outline-dark">바로구매</button>
-								</div>	
-						</div>
-					</div>
+						<div class="mt-3 mx-3"> <!--  책정보 -->
+							<table class="table table-borderless">
+							<tr>
+								<th>가격</th>
+								<td>
+									<div class="d-flex align-items-center"> <!--  가격정보 -->
+										<h3 class="font-weight-bold mx-2" th:text="|${#numbers.formatInteger(item.priceSales, 3, 'COMMA')} 원|">13,500원</h3>
+										<del><h6 th:text="|${#numbers.formatInteger(item.priceStandard, 3, 'COMMA')} 원|">18,000원</h6></del>
+										<h5 class="menu-text font-weight-bold mx-2">(10%)</h5>
+									</div> 
+								</td>
+							</tr>
+							<tr>
+								<th>배송안내</th>
+								<td>
+									<div>
+										<h6>도서 포함 15,000원 이상 무료배송</h6>
+										<h6>지금 주문하면 내일 도착</h6>
+										<h6>(대한민국 어쩌구 배달안될지동 기준) 지역변경</h6>
+									</div>
+								</td>
+							</tr>
+							<tr>
+								<th></th>
+								<td>
+									<button type="button" class="btn btn-outline-dark cartBtn" th:data-item-id="${item.itemId}">장바구니 추가</button>
+								</td>
+							</tr>
+							</table>
+						</div> 
+					</div><!--  커버, 가격정보 flex -->
 					
-					<div class="border"> <!--  책정보 -->
+					
+					
+					<div class="border my-4"> <!--  책정보 -->
 					
 						<div>
 							작가 소개
@@ -67,7 +70,7 @@
 						<div>
 							어쩌구저쩌구 
 						</div>
-						<div>
+						<div class="my-4">
 						 	<h4>기본 정보</h4>
 							<table class="table">
 								<tr>
@@ -108,8 +111,50 @@
 					
 					
 				</div>
+			</div>
+	
+			
 		</section>
 
-<script layout:fragment="script"></script>
+<script layout:fragment="script">
+
+$(document).ready(function(){
+
+	$(".cartBtn").on("click",function(){
+		let itemId = $(this).data("item-id");
+		// let userId = null; client를 구분하기 위한 값은 서버에서 처리한다고 생각해주기.
+        let quantity = 1;
+
+//	alert(itemId);
+// 로그인 안해도 장바구니에 저장될 수 있도록         
+        
+			$.ajax({
+	
+				type:"post"
+				,url:"/cart/add"
+				,data:{"itemId":itemId,"quantity":quantity}
+				,success:function(response){
+	
+					if(response.result =="success"){
+						alert("담기 성공!");
+					} else {
+						alert("담기 실패")
+					}
+				}
+				,error:function(){
+					alert("오류!!")
+				}
+			});
+		
+	
+		});
+	
+
+
+
+
+});
+
+</script>
 
 </html>
