--- a/src/main/resources/templates/order/order-history.html
+++ b/src/main/resources/templates/order/order-history.html
@@ -34,7 +34,7 @@
 						</div>
 					</div>
 			
-				<div class="d-none"><!--주문내역확인 페이지 없는 경우-->
+				<div th:if="${orderInfo == null}"><!--주문내역확인 페이지 없는 경우-->
 					<div class="order-info-none d-flex align-items-center justify-content-center"><!--주문내역확인 페이지 없는 경우-->
 						<div class="text-center">
 							<i class="h1 bi bi-exclamation-circle-fill font-weight-bold text-secondary"></i>
@@ -45,33 +45,35 @@
 					</div>
 				</div>
 				
-				<div class="order-box"><!--주문내역확인 페이지 리스트-->
-					<table class="table">
+				<div class="order-box" th:if="${orderInfo != null}"><!--주문내역확인 페이지 리스트-->
+					<table class="table" th:each="order:${order}">
 						<thead>
 							<tr>
-								<th  colspan="3">2025년 0월 00일</th>
-								<th class="text-success">1231241245</th>
+								<th  colspan="3" th:text="${#temporals.format(order.createdAt,'yyyy/MM/dd')}">2025년 0월 00일</th>
+								<th class="text-success" ><a th:href="@{/nunubooks/order/orderInfo(orderId=${order.id})}" th:text="${order.id}">주문번호</a></th>
 								<th><a href="#" class="text-dark">삭제</a></th>
 							</tr>
 						</thead>
+						<!-- 
 						<tbody>
 							<tr class="order-bookInfo" >
 								<td class="order-book-img bg-info">
-									<img src="#" >
+									<img th:src="${orderInfo.item[0].cover}" >
 								</td>
 								<td colspan="2" class="order-book-title align-middle">
-									<div class="font-weight-bold" >책 제목 어쩌구저쩌구저쩌구 </div>
-									<div>수량 :1개 </div>
+									<div class="font-weight-bold" th:text="${orderInfo.item[0].title}">책 제목 어쩌구저쩌구저쩌구 </div>
+									<div > 외 00개 </div>
 								</td>
 								<td class="order-book-amount align-middle text-center">
-									<div class="font-weight-bold">총가격</div>
+									<div class="font-weight-bold" th:text="|${#numbers.formatInteger(orderInfo.order.totalPrice, 3, 'COMMA')} 원|">총가격</div>
 								</td>
 								<td class="align-middle text-center border-left">
 										<span class="text-info font-weight-bold">주문 상태</span>
-								</td> <!--  rowspan="" 은 출력되는 리스트 수 만큼 적혀야함. 그리고 이 버튼 td는 반복되지 않아야함 -->
+								</td>
 							</tr>
 							
 						</tbody>
+						 -->
 							
 					</table>
 				
