[배지현] - 주문 삭제 테스트중 - order data 삭제 확인 - orderList data 삭제 오류 점검중 #6

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -250,6 +250,9 @@ color: #7CC491;
 	width:890px;
 	height:160px;
 }
+.order-date{
+	width:696px;
+}
 .order-book-img{
 	width:100px;
 	object-fit: contain;
