--- a/src/main/resources/templates/order/order-history.html
+++ b/src/main/resources/templates/order/order-history.html
@@ -105,22 +105,27 @@
 			let id = $(this).data("delete-order");
 //		alert(id);
 		
+		if(confirm("주문 내역을 삭제하시겠습니까 ? ")){
 		$.ajax({
 			type:"delete"
 			,url:"/order/delete"
 			,data:{"id":id}
 			,success:function(response){
 				if(response.result == "success"){
+					alert("주문내역이 삭제되었습니다.");
 					location.reload();
 				} else {
-					alert("삭제 실패")
+					alert("주문 삭제에 실패했습니다")
 				}
 			}
 			,error:function(){
-				alert("삭제 오류!! ");
+				alert("오류가 발생했습니다 다시 시도해주세요 ");
 			}
 			});
 		
+		} else {
+			 alert("주문 삭제 요청이 취소되었습니다.");
+		} 
 		
 		});
 	
